Testing `cat secrets.yaml >> "$GITHUB_OUTPUT"` command | Removed python .venv | addressed all other changes requested

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -33,14 +33,9 @@ jobs:
       - name: Read and assigns variables from secrets.yaml
         id: read_secrets
         run: |
-          while read KEY_VAL;
-          do
-              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
-              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
-              echo "$key=$value" >> "$GITHUB_OUTPUT"
-          done < ./secrets.yaml
+          cat secrets.yaml >> "$GITHUB_OUTPUT"
 
-  push-trigger:
+  build:
     needs: get-secrets
     uses: ./.github/workflows/build-workflow.yml
     with:
