feat: Add `pre-commit` hooks and use `git-crypt` secrets in pipeline (#3)
* Added `pre-commit` with `yamllint` && `yamlfix` + usage of `git-crypt`

Squashed + Added `git-crypto` and remaining `pre-commit-hooks` to `pre-config` library

Telling git-crypt to encrypt secrets.yaml

test git-crypt unlock

testing if variables are passing between jobs

reading secrects from `secrets.yaml`

v3 added `needs: get-secrets`

Changed `SMTP_PASSWORD` as leaked it in previous runs

test commit to check `pre-commit`

test run

Properly specified path of files fo check for `yamllint` and 'yamlfix'

* test edits

* Reorder or config.yaml | changed yamllint config | changed config names

* removed pre-commit in cofig | changed to args from entry | working of shellcheck

* Adressed most changes requested related to fomatting

* testing dynamic load od vars

Working with 3 jobs

* Using dynamic load of `secrets.yml` vars

* Addressed `pre-commit` config changes requested by Ksenia | Changed gmail APP password

* Testing `cat secrets.yaml >> "$GITHUB_OUTPUT"` command | Removed python .venv | addressed all other changes requested

* Returning YAML parsing with Bash for `id: read_secrets` step

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -4,8 +4,8 @@ name: build-pipeline
 on:
   push:
     branches:
-      - ci-feature
       - master
+      - feature/pre-commit
 
   pull_request:
     branches:
@@ -13,15 +13,42 @@ on:
     types: opened
 
 jobs:
-  push-trigger:
+  get-secrets:
+    name: Get secrets
+    runs-on: ubuntu-latest
+    outputs:
+      MAIL_FROM: ${{ steps.read_secrets.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ steps.read_secrets.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+
+      - name: Read and assigns variables from secrets.yaml
+        id: read_secrets
+        run: |
+          while read KEY_VAL;
+          do
+              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
+              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
+              echo "$key=$value" >> "$GITHUB_OUTPUT"
+          done < ./secrets.yaml
+
+  build:
+    needs: get-secrets
     uses: ./.github/workflows/build-workflow.yml
     with:
-      ghub_repository: amexei/angular-react-starter
       registry: ghcr.io
       smtp_address: smtp.gmail.com
       smtp_port: 587
     secrets:
-      mail_from: ${{ secrets.MAIL_FROM }}
-      mail_to: ${{ secrets.MAIL_TO }}
-      smtp_password: ${{ secrets.SMTP_PASSWORD }}
-      smtp_username: ${{ secrets.SMTP_USERNAME }}
+      MAIL_FROM: ${{ needs.get-secrets.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ needs.get-secrets.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ needs.get-secrets.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ needs.get-secrets.outputs.SMTP_PASSWORD }}
